@@ -30,11 +30,9 @@ extern struct TaskList *task_list;
 
 void tell_parent (int msg);
 
-/* fileopctx.h must be included for FileOpContext to be defined */
-#ifdef FILEOPCTX_H
-int do_background (FileOpContext *ctx, char *info);
-int parent_call (void *routine, FileOpContext *ctx, int argc, ...);
-#endif /* FILEOPCTX_H */
+struct FileOpContext;
+int do_background (struct FileOpContext *ctx, char *info);
+int parent_call (void *routine, struct FileOpContext *ctx, int argc, ...);
 
 void unregister_task_running (pid_t, int fd);
 
